Implement parallel pipeline